--- a/_posts/2016-04-06-BecoTests.html
+++ b/_posts/2016-04-06-BecoTests.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: BecoTests
-date: 2016-04-06 15:26:07.000000000 +11:00
+date: 2016-04-06 15:26:07.00
 type: page
 published: true
 status: publish
